tests/expectations/parser-expression/expression/circuit_init_fail.out
Error [EPAR0370003]: unexpected EOF
    --> test_0:1:4
     |
   1 | x {
     |    ^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', '::', '?', 'as' -- found '}'
    --> test_1:1:3
     |
   1 | x }
     |   ^
Error [EPAR0370047]: expected field name
    --> test_2:1:4
     |
   1 | x {,}
     |    ^
Error [EPAR0370047]: expected field name
    --> test_3:1:5
     |
   1 | x { , }
     |     ^
Error [EPAR0370047]: expected field name
    --> test_4:1:4
     |
   1 | x {,,,}
     |    ^
Error [EPAR0370047]: expected field name
    --> test_5:1:6
     |
   1 | x {x,,}
     |      ^
Error [EPAR0370047]: expected field name
    --> test_6:1:4
     |
   1 | x {,,x}
     |    ^
Error [EPAR0370047]: expected field name
    --> test_7:1:4
     |
   1 | x {,x}
     |    ^
Error [EPAR0370047]: expected field name
    --> test_8:1:8
     |
   1 | x {x:y,,}
     |        ^
Error [EPAR0370047]: expected field name
    --> test_9:1:4
     |
   1 | x {,,x:y}
     |    ^
Error [EPAR0370047]: expected field name
    --> test_10:1:4
     |
   1 | x {,x:y}
     |    ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '}'
    --> test_11:1:6
     |
   1 | x {x:}
     |      ^
